--- a/recy/src/main/res/layout/recy_empty_page.xml
+++ b/recy/src/main/res/layout/recy_empty_page.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
                 name="m"
-                type="com.onion.recy.recycler.BaseRecyclerAdapter"/>
+                type="com.onion.recy.recycler.BaseRecyclerAdapter.AdapterEmpty"/>
     </data>
     <LinearLayout
             android:paddingTop="50dp"
