--- a/recy/src/main/res/layout/recy_empty_page.xml
+++ b/recy/src/main/res/layout/recy_empty_page.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
                 name="m"
-                type="com.onion.recy.recycler.BaseRecyclerAdapter.AdapterEmpty"/>
+                type="com.onion.recy.bean.AdapterEmpty"/>
     </data>
     <LinearLayout
         android:id="@+id/recy_empty_root"
@@ -14,7 +14,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
-        android:clickable="true"
+            android:clickable="true"
+            app:bgColor="@{m.bg}"
             android:background="#1b1b27"
             android:orientation="vertical"
             android:visibility="visible">
