--- a/app/src/main/res/layout/activity_o.xml
+++ b/app/src/main/res/layout/activity_o.xml
@@ -1,21 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <TextView
-        android:id="@+id/normal"
-        android:text="正常模式"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-    <TextView
-        android:id="@+id/mult"
-        android:text="多布局 相同类模式"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-    <TextView
-        android:id="@+id/mult2"
-        android:text="多布局 不同类模式"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
 
-</LinearLayout>
+    <com.google.android.material.appbar.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:background="#5FF"
+            app:layout_scrollFlags="scroll|enterAlwaysCollapsed" />
+        <View
+            app:layout_scrollFlags="scroll|enterAlwaysCollapsed"
+
+            android:background="#000000"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"/>
+        <View
+            android:background="#000000"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"/>
+        <View
+            android:background="#FF00FF"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"/>
+    </com.google.android.material.appbar.AppBarLayout>
+
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" >
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="50dp"/><Button
+                android:layout_width="match_parent"
+                android:layout_height="50dp"/><Button
+                android:layout_width="match_parent"
+                android:layout_height="50dp"/><Button
+                android:layout_width="match_parent"
+                android:layout_height="50dp"/><Button
+                android:layout_width="match_parent"
+                android:layout_height="50dp"/><Button
+                android:layout_width="match_parent"
+                android:layout_height="50dp"/><Button
+                android:layout_width="match_parent"
+                android:layout_height="50dp"/><Button
+                android:layout_width="match_parent"
+                android:layout_height="50dp"/><Button
+                android:layout_width="match_parent"
+                android:layout_height="50dp"/><Button
+                android:layout_width="match_parent"
+                android:layout_height="50dp"/><Button
+                android:layout_width="match_parent"
+                android:layout_height="50dp"/><Button
+                android:layout_width="match_parent"
+                android:layout_height="50dp"/><Button
+                android:layout_width="match_parent"
+                android:layout_height="50dp"/><Button
+                android:layout_width="match_parent"
+                android:layout_height="50dp"/><Button
+                android:layout_width="match_parent"
+                android:layout_height="50dp"/><Button
+                android:layout_width="match_parent"
+                android:layout_height="50dp"/><Button
+                android:layout_width="match_parent"
+                android:layout_height="50dp"/>
+        </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
